fix layout bug by removing column limitations

--- a/course_selection/static/less/nice.less
+++ b/course_selection/static/less/nice.less
@@ -58,7 +58,7 @@ body {
 #calendarColumn {
     height: 85vh;
     width: 75%;
-    min-width: 540px;
+    // min-width: 540px;
     margin-top: 5px;
 }
 
